--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "superagent": "^6.1.0",
     "weky": "^3.1.8"
   },
-  "script": {
-    "start": "node index.js"
+  "engines": {
+    "node": "16.18.1"
   }
 }
